--- a/src/app/pages/mantenimientos/usuarios/usuario-nuevo.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuario-nuevo.component.html
@@ -132,14 +132,12 @@
               <label for="exampleInputEmail1">Tipo de documento</label>
               <div class="input-group">
                 <div class="input-group-addon"><i class="ti-id-badge"></i></div>
-                <div class="input-group">
                   <select class="form-control" formControlName="tipoIdentificacion">
                     <option value="">Seleccione el tipo de documento</option>
                     <option>Cedula</option>
                     <option>Tarjeta de identidad</option>
                     <option>Pasaporte</option>
                   </select>
-                </div>
               </div>
             </div>
           </div>
@@ -203,13 +201,11 @@
               <label for="exampleInputEmail1">Tipo de vehículo</label>
               <div class="input-group">
                 <div class="input-group-addon"><i class="ti-car"></i></div>
-                <div class="input-group">
                   <select class="form-control" formControlName="vehiculo">
                     <option value="">Seleccione el tipo de vehículo</option>
                     <option>Carro</option>
                     <option>Moto</option>
                   </select>
-                </div>
               </div>
             </div>
           </div>
@@ -234,7 +230,7 @@
         </div>
       </div>
       <div class="form-group row m-b-0">
-        <div class="offset-sm-3 col-sm-9">
+        <div>
           <button
             type="submit"
             [disabled]="usuarioForm.invalid"
