Limpieza de codigo

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -42,20 +42,13 @@
                 type="checkbox"
                 class="filled-in chk-col-light-blue"
               />
-              <label for="checkbox-signup"> Recuerdame </label>
             </div>
-            <a
-              href="javascript:void(0)"
-              id="to-recover"
-              class="text-dark pull-right"
-              ><i class="fa fa-lock m-r-5"></i> Olvidaste pwd?</a
-            >
           </div>
         </div>
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
-              class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"
+              class="btn btn-rounded btn-outline-success"
               type="submit"
             >
               Iniciar sesión
@@ -67,14 +60,6 @@
             <div class="social">
               <div id="my-signin2"></div>
             </div>
-          </div>
-        </div>
-        <div class="form-group m-b-0">
-          <div class="col-sm-12 text-center">
-            No tienes una cuenta?
-            <a routerLink="/register" href="pages-register2.html" class="text-primary m-l-5"
-              ><b>Registrarse</b></a
-            >
           </div>
         </div>
       </form>
