Limpieza final de código

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -73,7 +73,7 @@
             href="javascript:void(0)"
             ><i class="ti-search"></i
           ></a>
-          <form class="app-search" (ngSubmit)="buscar(txtTermino.value)">
+          <form class="app-search">
             <input
               type="text"
               class="form-control"
